[title] markdown样式处理 [description] 1.解决了存储到数据库后，markdown部分样式丢失的问题 2.解决了其他版本的jdk无法使用的问题